# CtcLMI

./: CMakeLists.txt  CtcBoxLMI.cpp  CtcBoxLMI.h  CtcEllipsoid.cpp  CtcEllipsoid.h  CtcEllipsoids.cpp  CtcEllipsoids.h  CtcLMI.cpp  CtcLMI.h  Example1.cpp  README.md  disks.cpp  ellipses.cpp
